# src/routes/usuarios.routes.js
@@ -1,9 +1,12 @@
 const express = require('express');
 const router = express.Router();
-const { registrarUsuario, iniciarSesion } = require('../controllers/usuarios.controller');
+const { registrarUsuario, iniciarSesion, actualizarUsuario } = require('../controllers/usuarios.controller');
+const auth =  require('../middlewares/auth');
 
 router.post('/registrar', registrarUsuario);
 
 router.post('/login', iniciarSesion);
+
+router.put('/:id', auth(['estudiante', 'docente', 'admin']), actualizarUsuario);
 
 module.exports = router;
